<resources>
    <string name="app_name">My Application</string>
    <string name="monstera_adonsolii">Monstera Adonsolii</string>
    <string name="monstera_family">Monstera family</string>
    <string name="flowers">Flowers</string>
    <string name="indoor">Indoor</string>
    <string name="_2">+2</string>
    <string name="plantscape">Plantscape</string>
    <string name="exclusive_offer">Exclusive Offer</string>
    <string name="get_your_1st_plant_60_off">Get your 1st plant @ 60% off</string>
    <string name="search">Search</string>
    <string name="green">Green</string>
    <string name="_400">400$</string>
</resources>