<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/plantscape"
        android:textColor="#0D986A"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/vector"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/group163"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="370dp"
        android:layout_height="250dp"
        android:layout_marginTop="48dp"
        app:cardBackgroundColor="#F9D7BD"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@drawable/prettydarkskin" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppinsbolditalic"
                android:text="@string/exclusive_offer"
                android:textColor="#002140"
                android:textSize="30sp" />
        </LinearLayout>

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="20dp"
            android:text="@string/get_your_1st_plant_60_off"
            android:textColor="#002140"
            android:textSize="17sp" />


    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/appCompatEditText"
        style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
        android:layout_width="371dp"
        android:layout_height="46dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:drawableEnd="@drawable/group_76"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"

        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/appCompatEditText"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/groupgr" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/group160" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/group161" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="55dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/indoor"
            android:textAlignment="textStart"
            android:textColor="#0D986A"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="35dp"
            android:text="@string/flowers"
            android:textColor="#435B71"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:text="@string/green"
            android:textAlignment="textEnd"
            android:textColor="#435B71"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="381dp"
        android:layout_height="156dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="56dp"
        android:foregroundGravity="center"
        app:cardBackgroundColor="#DCE8D6"
        app:cardCornerRadius="20dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">


        <ImageView
            android:layout_width="146dp"
            android:layout_height="135dp"

            android:src="@drawable/intersect"
            tools:layout_editor_absoluteX="-50dp"
            tools:layout_editor_absoluteY="527dp" />


        <View
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/groupheart" />

        <TextView
            android:layout_marginTop="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:text="@string/monstera_adonsolii"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="38dp"
            android:text="@string/monstera_family"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="68dp"
            android:text="@string/_400"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <View
            android:layout_width="74dp"
            android:layout_height="156dp"
            android:layout_gravity="end"
            android:background="@drawable/rectangle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="330dp"
            android:text="+2"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="389dp"
        android:layout_height="156dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="44dp"
        android:foregroundGravity="center"
        app:cardBackgroundColor="#D6E4E8"
        app:cardCornerRadius="20dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">


        <ImageView
            android:layout_width="144dp"
            android:layout_height="match_parent"

            android:src="@drawable/intersect"
            tools:layout_editor_absoluteX="-50dp"
            tools:layout_editor_absoluteY="527dp" />

        <View
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/group2006" />

        <TextView
            android:layout_marginTop="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:text="Monstera Adonsolii"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="48dp"
            android:text="Monstera family"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="78dp"
            android:text="400$"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <View
            android:layout_width="74dp"
            android:layout_height="156dp"
            android:layout_gravity="end"
            android:background="@drawable/rectangle110" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="330dp"
            android:text="@string/_2"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>